--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -349,5 +349,22 @@ header {
   color:#F3F4F9;
  }
 
+ /********************
+*     Footer
+*********************/
+
+footer{
+   padding-left: 3rem;
+  padding-right: 3rem;
+  text-align: center;
+}
+
+.social-icons li{
+  display: inline-block;
+  margin-right: 0px;
+  margin-right: 5px;
+  }
+
+
 }
 
