--- a/resources/css/volunteer-queries.css
+++ b/resources/css/volunteer-queries.css
@@ -213,6 +213,7 @@ header {
   }
 
   .header-text-box{
+    display:none;
     top: 25%;
     left: 20%;
   }
@@ -232,7 +233,12 @@ header {
   }
   
   .contact-form { width: 80%; }
-
+ 
+  .nav-row{
+    margin-right: 30px;
+  }
+ 
+  
 }
 
 
@@ -308,7 +314,7 @@ header {
   
 
   .header-text-box { 
-    padding-top:50px;
+    padding-top:200px;
     padding-left:30px
   }
 
