--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -243,6 +243,7 @@ header {
 
 /* Small phones to small tablets: from 481px to 767px */
 @media only screen and (max-width: 767px) {
+
   body { font-size: 16px; }
   section { padding: 30px 0; }
 
@@ -251,6 +252,7 @@ header {
     background-size: cover;
     background-position-x: 358px;
   }
+
   .header-text-box { padding-top: 50px;}
   
   .row { padding:  4%; }
@@ -279,8 +281,6 @@ header {
   h1 { font-size: 180%; }
   h2 { font-size: 150%; }
   
- 
-
   .my-work-box:first-child { text-align: center; }
   
   .work-box div {
@@ -303,20 +303,29 @@ header {
   section { padding: 25px 0; }
   .contact-form {width: 100%; }
 
-  
+  .volunteer-icon {
+    padding-top: 20px;
+  }
 
+  .header-text-box-2{
+    display: inline;
+    padding-top: 10px;
+  }
+ 
+ 
   .header-text-box { 
     padding-top:50px;
     padding-left:30px
   }
 
-  .main-nav { display:none;}
+  .main-nav {display:none;}
 
   .mobile-nav-icon {
     display: inline-block;
     margin-top: 30px;
-    margin-left: 142px;
+    margin-left: 170px;
   }
+
   .main-nav {
     float: left;
     margin-top: 30px;
